    
    - added decimal.Decimal as an "auto-detect" type; bind parameters
      and generic functions will set their type to Numeric when a 
      Decimal is used.
      
- mysql
    - The 'length' argument to MSInteger, MSBigInteger, MSTinyInteger,
      MSSmallInteger and MSYear has been renamed to 'display_width'.
      
    - Added MSMediumInteger type [ticket:1146].

- oracle
    - limit/offset no longer uses ROW NUMBER OVER to limit rows,
      and instead uses subqueries in conjunction with a special
      Oracle optimization comment.  Allows LIMIT/OFFSET to work
      in conjunction with DISTINCT. [ticket:536]
    - has_sequence() now takes the current "schema" argument into
      account [ticket:1155]
    - added BFILE to reflected type names [ticket:1121]

0.5beta3
========

0.5beta3 includes all bugfixes listed under release "0.4.7".

- orm
    - The "entity_name" feature of SQLAlchemy mappers has been
      removed.  For rationale, see http://tinyurl.com/6nm2ne

    - the "autoexpire" flag on Session, sessionmaker(), and
      scoped_session() has been renamed to "expire_on_commit".  It
      does not affect the expiration behavior of rollback().

    - fixed endless loop bug which could occur within a mapper's
      deferred load of inherited attributes.

    - a legacy-support flag "_enable_transation_accounting" flag
      added to Session which when False, disables all
      transaction-level object accounting, including expire on
      rollback, expire on commit, new/deleted list maintenance, and
      autoflush on begin.

    - The 'cascade' parameter to relation() accepts None as a value,
      which is equivalent to no cascades.

    - A critical fix to dynamic relations allows the "modified"
      history to be properly cleared after a flush().

    - user-defined @properties on a class are detected and left in
      place during mapper initialization.  This means that a
      table-bound column of the same name will not be mapped at all